prototype/stylesheet.css
/* Default Media Mobile */
html {
	height: 100;
}
body {
	background: green;
	height: 80%;
}


header { 
	height: 15vh;
	width: 100%;
	background: orange;
	border-top-left-radius: 5em;
	border-top-right-radius: 5px;
	position: relative;
}
#header-pic {
	float: left;
	max-width: 100%;
	max-height: 100%;
	position: relative;
	height: 100%;

}


#header-name {
	/*float: left;*/
	font-size: 4vh;
	text-align: center;
	padding-top: 0.5em;
	font-family: 'Ubuntu Mono', sans-serif;
	font-weight: 700;
}
#firstname {
	font-size: 5vh;
}
nav {
	text-align: center;
	/*margin-top: 5%;*/
	position: relative;
	height: 60vh;
	clear: both;

}
nav a {
	text-decoration: none;
	font-family: 'Ubuntu Mono', sans-serif;
	font-weight: 400;
	font-size: 1.7em;
}

nav a p {
	margin-top: 0.2em;
}
#nav-home {
	height: 17.5%;
	width: 70%;
	margin-top: 2.5%;
	margin-left: 15%;
	margin-right: 15%;
	background-color: yellow;

	border-radius: 5px;
	border: 2px solid black;
	position: relative;
}

#nav-home:hover {
	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
	box-shadow: 0 0 10px rgba(0,0,0,0.5);
}
#nav-portfolio {
	height: 17.5%;
	width: 70%;
	margin-top: 2.5%;
	margin-left: 15%;
	margin-right: 15%;
	background-color: blue;
	border-radius: 5px;
	border: 2px solid black;
	position: relative;
}

#nav-portfolio:hover {
	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
	box-shadow: 0 0 10px rgba(0,0,0,0.5);
}
#nav-about {
	height: 17.5%;
	width: 70%;
	margin-top: 2.5%;
	margin-left: 15%;
	margin-right: 15%;
	background-color: yellow;
	border-radius: 5px;
	border: 2px solid black;
	position: relative;
}
#nav-about:hover {
	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
	box-shadow: 0 0 10px rgba(0,0,0,0.5);
}

#nav-resume {
	height: 17.5%;
	width: 70%;
	margin-top: 2.5%;
	margin-left: 15%;
	margin-right: 15%;
	background-color: blue;
	border-radius: 5px;
	border: 2px solid black;
	position: relative;
}
#nav-resume:hover {
	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
	box-shadow: 0 0 10px rgba(0,0,0,0.5);
}
#nav-blog {
	height: 17.5%;
	width: 70%;
	margin-top: 2.5%;
	margin-left: 15%;
	margin-right: 15%;
	background-color: yellow;
	border-radius: 5px;
	border: 2px solid black;
	position: relative;
}
#nav-blog:hover {
	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
	box-shadow: 0 0 10px rgba(0,0,0,0.5);
}
footer {
	width: 100%;
	background-color: purple;
	height: 15vh;
	margin-top: 2em;
	border-radius: 1em;
	clear: both;

}

.footer-pic {
	float:left;
	/*margin-top: 10%;*/
	border-radius: 1em;
	margin-left: 2vw;
	
	max-width: 100%;
	max-height: 100%;
	height: 100%;


}

.medialink {
	height: 100%;
	position: relative;
}

/* Large Screens only transfer */ 

@media screen and (min-width: 600px) {
	body {
		background: blue;
	}
}

